examples/datalog/18_advanced_patterns/131_percent_of_total.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_percent
Knowledge graph 'test_percent' created.
Switched to knowledge graph: test_percent
> .kg use test_percent
Switched to knowledge graph: test_percent
> +sales[(1, 100), (2, 200), (3, 300)].
Inserted 3 fact(s) into 'sales'.
> +total(<SUM:Amount>) :- sales(_, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
